--- a/src/test/resources/tomcat/webapps/ROOT/WEB-INF/web.xml
+++ b/src/test/resources/tomcat/webapps/ROOT/WEB-INF/web.xml
@@ -18,8 +18,11 @@
     </error-page>
 
     <login-config>
-        <auth-method>BASIC</auth-method>
-        <realm-name>Protected Area</realm-name>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/login.jsp</form-login-page>
+            <form-error-page>/login.jsp</form-error-page>
+        </form-login-config>
     </login-config>
 
     <security-constraint>
