--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
 version=1.1.1-SNAPSHOT
 
+# SonarQube token
+# alternative: environment variable SONAR_TOKEN
+#sonar.login=
+
 # signing information
 signing.keyId=
 signing.password=
