--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,16 +5,24 @@
 
 version: 2
 updates:
+
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
+      time: "17:00"
+      timezone: "Europe/Zurich"
     open-pull-requests-limit: 100
     ignore:
       - dependency-name: "org.apache.tomcat:tomcat-catalina"
         versions: ["[10.0,)"]
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
+      time: "17:00"
+      timezone: "Europe/Zurich"
     open-pull-requests-limit: 100
