Gradle: Reorganize Gradle properties.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,33 @@
-version=1.2.1-SNAPSHOT
+
+# PROJECT ----------------------------------------------------------------------
+
+version = 1.2.1-SNAPSHOT
+
+# GRADLE SETTINGS --------------------------------------------------------------
+
+# display warnings when using deprecated features
+org.gradle.warning.mode = all
+
+# increase memory limits for the daemon process
+org.gradle.jvmargs = -Xmx1024m -XX:MetaspaceSize=512m -XX:MaxMetaspaceSize=1024m
+
+# disable colors and progress indicator
+#org.gradle.console = plain
+
+# PUBLISH ----------------------------------------------------------------------
 
 # Sonar token
 # alternative: environment variable SONAR_TOKEN
-#sonar.login=
+# (see ~/.gradle/gradle.properties)
+#sonar.login =
 
 # signing information
-signing.keyId=
-signing.password=
-signing.secretKeyRingFile=
+# (see ~/.gradle/gradle.properties)
+#signing.keyId =
+#signing.password =
+#signing.secretKeyRingFile =
 
 # credentials for Sonatype OSSRH
-sonatypeUsername=
-sonatypePassword=
-
-# show all deprecation warnings
-org.gradle.warning.mode=all
-
-# increase memory limits for the daemon process
-org.gradle.jvmargs=-Xmx1024m -XX:MetaspaceSize=512m -XX:MaxMetaspaceSize=1024m
+# (see ~/.gradle/gradle.properties)
+#sonatypeUsername =
+#sonatypePassword =
